overflow-x hidden (scroll-x) bugfix

--- a/index.css
+++ b/index.css
@@ -11,6 +11,7 @@ body {
 
 .container {
     scroll-snap-type: y mandatory;
+    overflow-x: hidden;
     overflow-y: scroll;
     height: 100vh;
 }
